--- a/MLOPS_Project_1/Jenkinsfile
+++ b/MLOPS_Project_1/Jenkinsfile
@@ -1,11 +1,13 @@
-pipeline{
+pipeline {
     agent any
 
-    stages('Cloning Github repo to Jenkins'){
-        steps{
-            script{
-                echo 'Cloning Github repo to Jenkins..........'
-                checkout scmGit(branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[credentialsId: 'github-tokens', url: 'https://github.com/RohitDusane/MLOPS_JENKINS.git']])
+    stages{
+        stage('Cloning Github repo to Jenkins'){
+            steps{
+                script{
+                    echo 'Cloning Github repo to Jenkins..........'
+                    checkout scmGit( branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[credentialsId: 'github-tokens', url: 'https://github.com/RohitDusane/MLOPS_JENKINS.git']])
+                }
             }
         }
     }
