--- a/MLOPS_Project_1/Jenkinsfile
+++ b/MLOPS_Project_1/Jenkinsfile
@@ -1,12 +1,30 @@
 pipeline {
     agent any
 
+    enviornment{
+        VENV_DIR = 'venv'
+    }
+
     stages{
         stage('Cloning Github repo to Jenkins'){
             steps{
                 script{
                     echo 'Cloning Github repo to Jenkins..........'
                     checkout scmGit( branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[credentialsId: 'github-tokens', url: 'https://github.com/RohitDusane/MLOPS_JENKINS.git']])
+                }
+            }
+        }
+
+        stage('Setting up virtual enviornment and Installing dependencies'){
+            steps{
+                script{
+                    echo 'Setting up virtual enviornment and Installing dependencies..........'
+                    sh '''
+                    python -m venv ${VENV_DIR}
+                    . ${VENV_DIR}/bin/activate
+                    pip install --upgrade pip
+                    pip install -r requirements.txt
+                    '''
                 }
             }
         }
