--- a/MLOPS_Project_1/Jenkinsfile
+++ b/MLOPS_Project_1/Jenkinsfile
@@ -1,26 +1,28 @@
+//  ----------- JENKIS PIPELINE ----------- 
 pipeline {
     agent any
 
     environment {
         VENV_DIR = 'venv'
-        GCP_PROJECT = "mlops-project-1-476006"
-        // GCLOUD_PATH = "/var/jenkins_home/google-cloud-sdk/bin"
+        GCP_PROJECT = "mlops-project-1-476006" // Update your GCP project ID here
+        // You don't need to set GCLOUD_PATH if `gcloud` is globally available
     }
 
-    stages{
-        stage('Cloning Github repo to Jenkins'){
-            steps{
-                script{
+
+    stages {
+        stage('Cloning Github repo to Jenkins') {
+            steps {
+                script {
                     echo 'Cloning Github repo to Jenkins..........'
                     checkout scmGit(branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[credentialsId: 'github-tokens', url: 'https://github.com/RohitDusane/MLOPS_JENKINS.git']])
                 }
             }
         }
 
-        stage('Setting up virtual enviornment and Installing dependencies'){
-            steps{
-                script{
-                    echo 'Setting up virtual enviornment and Installing dependencies..........'
+        stage('Setting up virtual environment and Installing dependencies') {
+            steps {
+                script {
+                    echo 'Setting up virtual environment and Installing dependencies..........'
                     sh '''
                     python -m venv ${VENV_DIR}
                     . ${VENV_DIR}/bin/activate
@@ -31,24 +33,26 @@ pipeline {
             }
         }
 
-        stage('Building and pushing docker image to Google Container Registry'){
-            steps{
-                withCredentials({file(credentialsId: 'gcp-key', variable : 'GOOGLE_APPLICATION_CREDENTIALS')}){
-                    script{
+        stage('Building and pushing Docker image to Google Container Registry') {
+            steps {
+                withCredentials([file(credentialsId: 'gcp-key', variable: 'GOOGLE_APPLICATION_CREDENTIALS')]) {
+                    script {
                         echo 'Building and Pushing Docker Image to GCR.............'
                         sh '''
-                        // export PATH=$PATH:${GCLOUD_PATH}
-
+                        # Authenticate with Google Cloud using service account
                         gcloud auth activate-service-account --key-file=${GOOGLE_APPLICATION_CREDENTIALS}
 
+                        # Set the GCP project
                         gcloud config set project ${GCP_PROJECT}
 
+                        # Configure Docker to authenticate with GCR
                         gcloud auth configure-docker --quiet
 
+                        # Build the Docker image
                         docker build -t gcr.io/${GCP_PROJECT}/ml-project:latest .
 
-                        docker push gcr.io/${GCP_PROJECT}/ml-project:latest 
-
+                        # Push the Docker image to GCR
+                        docker push gcr.io/${GCP_PROJECT}/ml-project:latest
                         '''
                     }
                 }
@@ -56,5 +60,4 @@ pipeline {
         }
 
     }
-
 }
