--- a/MLOPS_Project_1/Jenkinsfile
+++ b/MLOPS_Project_1/Jenkinsfile
@@ -19,19 +19,19 @@ pipeline {
             }
         }
 
-        // stage('Setting up virtual environment and Installing dependencies') {
-        //     steps {
-        //         script {
-        //             echo 'Setting up virtual environment and Installing dependencies..........'
-        //             sh '''
-        //             python -m venv ${VENV_DIR}
-        //             . ${VENV_DIR}/bin/activate
-        //             pip install --upgrade pip
-        //             pip install -r requirements.txt
-        //             '''
-        //         }
-        //     }
-        // }
+        stage('Setting up virtual environment and Installing dependencies') {
+            steps {
+                script {
+                    echo 'Setting up virtual environment and Installing dependencies..........'
+                    sh '''
+                    python -m venv ${VENV_DIR}
+                    . ${VENV_DIR}/bin/activate
+                    pip install --upgrade pip
+                    pip install -r requirements.txt
+                    '''
+                }
+            }
+        }
 
         // stage('Building and pushing Docker image to Google Container Registry') {
         //     steps {
