--- a/MLOPS_Project_1/Jenkinsfile
+++ b/MLOPS_Project_1/Jenkinsfile
@@ -4,8 +4,8 @@ pipeline {
 
     environment {
         VENV_DIR = 'venv'
-        GCP_PROJECT = "mlops-project-1-476006" // Update your GCP project ID here
-        // You don't need to set GCLOUD_PATH if `gcloud` is globally available
+        GCP_PROJECT = 'mlops-project-1-476006' // Update your GCP project ID here
+        GCLOUD_PATH = '/usr/bin'
     }
 
 
@@ -33,31 +33,34 @@ pipeline {
             }
         }
 
-        // stage('Building and pushing Docker image to Google Container Registry') {
-        //     steps {
-        //         withCredentials([file(credentialsId: 'gcp-key', variable: 'GOOGLE_APPLICATION_CREDENTIALS')]) {
-        //             script {
-        //                 echo 'Building and Pushing Docker Image to GCR.............'
-        //                 sh '''
-        //                 # Authenticate with Google Cloud using service account
-        //                 gcloud auth activate-service-account --key-file=${GOOGLE_APPLICATION_CREDENTIALS}
+        stage('Building and pushing Docker image to Google Container Registry') {
+            steps {
+                withCredentials([file(credentialsId: 'gcp-key', variable: 'GOOGLE_APPLICATION_CREDENTIALS')]) {
+                    script {
+                        echo 'Building and Pushing Docker Image to Google Container Registry.............'
+                        sh '''
+                        # Gcloud avaiale or not 
+                        export PATH=$PATH:${GCLOUD_PATH}
 
-        //                 # Set the GCP project
-        //                 gcloud config set project ${GCP_PROJECT}
+                        # Authenticate with Google Cloud using service account
+                        gcloud auth activate-service-account --key-file=${GOOGLE_APPLICATION_CREDENTIALS}
 
-        //                 # Configure Docker to authenticate with GCR
-        //                 gcloud auth configure-docker --quiet
+                        # Set the GCP project
+                        gcloud config set project ${GCP_PROJECT}
 
-        //                 # Build the Docker image
-        //                 docker build -f MLOPS_Project_1/Dockerfile -t gcr.io/${GCP_PROJECT}/ml-project:latest .
+                        # Configure Docker to authenticate with GCR
+                        gcloud auth configure-docker --quiet
 
-        //                 # Push the Docker image to GCR
-        //                 docker push gcr.io/${GCP_PROJECT}/ml-project:latest
-        //                 '''
-        //             }
-        //         }
-        //     }
-        // }
+                        # Build the Docker image
+                        docker build -f MLOPS_Project_1/Dockerfile -t gcr.io/${GCP_PROJECT}/ml-project:latest .
+
+                        # Push the Docker image to GCR
+                        docker push gcr.io/${GCP_PROJECT}/ml-project:latest
+                        '''
+                    }
+                }
+            }
+        }
 
     }
 }
