--- a/MLOPS_Project_1/Jenkinsfile
+++ b/MLOPS_Project_1/Jenkinsfile
@@ -13,8 +13,12 @@ pipeline {
         stage('Cloning Github repo to Jenkins') {
             steps {
                 script {
-                    echo 'Cloning Github repo to Jenkins..........'
-                    checkout scmGit(branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[credentialsId: 'github-token', url: 'https://github.com/RohitDusane/MLOPS_JENKINS.git']])
+                     echo 'Cloning Github repo to Jenkins..........'
+                    // Checkout the GitHub repo with the provided branch and credentials
+                    checkout scmGit(
+                        branches: [[name: '*/main']], 
+                        extensions: [], 
+                        userRemoteConfigs: [[credentialsId: 'github-token', url: 'https://github.com/RohitDusane/MLOPS_JENKINS.git']]
                 }
             }
         }
