--- a/MLOPS_Project_1/Jenkinsfile
+++ b/MLOPS_Project_1/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
                     checkout scmGit(
                         branches: [[name: '*/main']], 
                         extensions: [], 
-                        userRemoteConfigs: [[credentialsId: 'github-token', url: 'https://github.com/RohitDusane/MLOPS_JENKINS.git']]
+                        userRemoteConfigs: [[credentialsId: 'github-token', url: 'https://github.com/RohitDusane/MLOPS_JENKINS.git']])
                 }
             }
         }
