--- a/MLOPS_Project_1/Jenkinsfile
+++ b/MLOPS_Project_1/Jenkinsfile
@@ -4,6 +4,8 @@ pipeline {
 
     environment {
         VENV_DIR = 'venv'
+        GCP_PROJECT = 'mlops-project-1-476006'
+        GCLOUD_PATH = '/var/jenkins_home/google-cloud-sdk/bin'
     }
 
 
@@ -27,6 +29,32 @@ pipeline {
                     pip install --upgrade pip
                     pip install -e .
                     '''
+                }
+            }
+        }
+
+        stage('Building and Pushing Docker Image to GCR'){
+            steps{
+                
+                withCredentials([file(credentialsId: 'gcp-key', variable : 'GOOGLE_APPLICATION_CREDENTIALS')]){
+                    script{
+                        echo 'Building and Pushing Docker Image to GCR.............'
+                        sh '''
+                        export PATH=$PATH:${GCLOUD_PATH}
+
+
+                        gcloud auth activate-service-account --key-file=${GOOGLE_APPLICATION_CREDENTIALS}
+
+                        gcloud config set project ${GCP_PROJECT}
+
+                        gcloud auth configure-docker --quiet
+
+                        docker build -t gcr.io/${GCP_PROJECT}/ml-project:latest .
+
+                        docker push gcr.io/${GCP_PROJECT}/ml-project:latest 
+
+                        '''
+                    }
                 }
             }
         }
