--- a/MLOPS_Project_1/Jenkinsfile
+++ b/MLOPS_Project_1/Jenkinsfile
@@ -49,7 +49,7 @@ pipeline {
 
                         gcloud auth configure-docker --quiet
 
-                        docker build -t gcr.io/${GCP_PROJECT}/ml-project:latest .
+                        docker build -f MLOPS_Project_1/Dockerfile -t gcr.io/${GCP_PROJECT}/ml-project:latest .
 
                         docker push gcr.io/${GCP_PROJECT}/ml-project:latest 
 
