--- a/MLOPS_Project_1/Dockerfile
+++ b/MLOPS_Project_1/Dockerfile
@@ -5,21 +5,22 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1
 
 # Set working directory inside the container
-WORKDIR /app
+WORKDIR /app/MLOPS_Project_1
+ENV PYTHONPATH=/app/MLOPS_Project_1/src:$PYTHONPATH
 
 # Install system dependencies
 RUN apt-get update && \
     apt-get install -y --no-install-recommends libgomp1 && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
-
+# Copy project files into the container
 COPY . .
 
 # Install the package requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Train the model before running the application
-RUN python MLOPS_Project_1/pipeline/training_pipeline.py
+RUN python pipeline/training_pipeline.py
 
 # Expose the port (assuming the app runs on port 5000)
 EXPOSE 5000
