--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ mlruns/
 # MLOPS_Project_1/artifacts/raw/
 artifacts/models/images/
 notebooks/processed_train.csv
+custom_jenkins/etc/docker/
 
 # ------------------ Data ------------------
 data/
